--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -153,7 +153,9 @@
                         <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación del salón es https://www.google.com.ar/maps/place/Calima+Eventos/@-34.606039,-58.373266,15z/data=!4m5!3m4!1s0x95a3352ec5210079:0x51520efb5b86e335!8m2!3d-34.606761!4d-58.3637929">
                         <span class="fa fa-envelope"></span></a>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12045.49276300984!2d-58.373265998183584!3d-34.60603900245349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352ec5210079%3A0x51520efb5b86e335!2sCalima+Eventos!5e0!3m2!1ses!2sar!4v1499092163296" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
                     </div>
+                </div>
                 </div>
             </section>
 
