--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -122,6 +122,12 @@
       .top .welcome .invitacion span {
         display: block;
         font-size: 30px; }
+    @media (min-width: 768px) and (max-width: 1024px) {
+      .top .welcome .nuestroCasam {
+        font-size: 29px !important; } }
+    @media (min-width: 0px) and (max-width: 767px) {
+      .top .welcome .nuestroCasam {
+        font-size: 29px !important; } }
     .top .welcome .ctaConfirm a {
       font-size: 17px;
       padding: 10px;
@@ -218,6 +224,20 @@
 .regalo {
   color: gray;
   height: 560px; }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .regalo {
+      height: inherit !important;
+      font-size: 55px !important; } }
+  @media (min-width: 0px) and (max-width: 767px) {
+    .regalo {
+      height: inherit !important;
+      font-size: 55px !important; } }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .regalo .regalosImg {
+      display: none !important; } }
+  @media (min-width: 0px) and (max-width: 767px) {
+    .regalo .regalosImg {
+      display: none !important; } }
   .regalo .titlePhrase {
     font-family: 'Great Vibes';
     font-size: 60px; }
@@ -291,6 +311,12 @@ footer .row {
   background-repeat: no-repeat;
   background-position: 0 35%;
   color: white; }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    footer .row {
+      height: 270px !important; } }
+  @media (min-width: 0px) and (max-width: 767px) {
+    footer .row {
+      height: 270px !important; } }
 footer .top {
   margin-top: 50px;
   -ms-transform: rotate(180deg);
@@ -309,5 +335,11 @@ footer .saludo {
     font-family: 'Sacramento';
     font-size: 80px;
     padding: 10px 0; }
+    @media (min-width: 768px) and (max-width: 1024px) {
+      footer .saludo p {
+        font-size: 60px; } }
+    @media (min-width: 0px) and (max-width: 767px) {
+      footer .saludo p {
+        font-size: 60px; } }
 
 /*# sourceMappingURL=style.css.map */
