--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -61,7 +61,7 @@
                         <p class="title col-sm-12 text-center">20:30 hs.</p> -->
                     </div>
                     <div class="col-md-6">
-                            <a href="#ubicaciones" class="ancla">
+                            <a href="#party" class="ancla">
                                 <p class="title col-sm-12 text-center">La Fiesta</p>
                                 <img src="{{asset('bundles/app/images/menu02.png')}}" alt="">
                             </a>
@@ -107,31 +107,14 @@
                                 <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
                                 <span>Banco Francés 123321456654 </span>
                                 <span>CBU 1324354657687980. </span>
-                               {#-El regalo es opcional,la asistencia obligatoria. 
-                                Pero si queres tener un detalle con nosotros qué mejor regalo 
-                                que una ayudita para nuestra luna de miel.<br/>
-                                
-                                -Nuestro mejor regalo es que estés con nosotros en nuestro día,
-                                pero si querés hacernos un obsequio, este es nuestro número de cuenta.
-                                <br/>
-                                
-                                - Ayudanos a pagarnos la luna de miel.
-                                <br/>
-                                - Que compartas este día tan importante con nosotros es un gran regalo..
-                                Pero si deseas que nuestros sueños se hagan realidad,
-                                puedes ayudarnos en este número de cuenta.
-                                <br/>
-                                -Tu presencia es nuestro mejor regalo pero si queres, podés contribuir 
-                                a hacer nuestra luna de miel innolvidable.
-                                <br/>#}
                             </div>
                         <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
                     </div>
                 </div>
             </section>
-            <section class="col-sm-12 ubicaciones" id="ubicaciones"> 
+            <section class="col-sm-12 ubicaciones" > 
                 <div class="container">   
-                    <div class="col-md-6 block text-center church"> 
+                    <div class="col-md-6 block text-center" id="ubicaciones"> 
                         <h2>La Iglesia</h2>
                         <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
                         <div class="info">
@@ -141,9 +124,8 @@
                         <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación de la Iglesia es https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193">
                         <span class="fa fa-envelope"></span></a>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5519.894782891258!2d-58.3923583261413!3d-34.650937927127856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c9be450e3%3A0x1f8fb272dc109536!2sBasilica+del+Sagrado+Corazon+de+Jesus!5e0!3m2!1ses!2sar!4v1499092221098" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
                     </div>
-                    <div class="col-md-6 block text-center"> 
+                    <div class="col-md-6 block text-center" id="party"> 
                         <h2>La Fiesta</h2>
                         <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
                         <div class="info">
@@ -153,7 +135,6 @@
                         <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación del salón es https://www.google.com.ar/maps/place/Calima+Eventos/@-34.606039,-58.373266,15z/data=!4m5!3m4!1s0x95a3352ec5210079:0x51520efb5b86e335!8m2!3d-34.606761!4d-58.3637929">
                         <span class="fa fa-envelope"></span></a>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12045.49276300984!2d-58.373265998183584!3d-34.60603900245349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352ec5210079%3A0x51520efb5b86e335!2sCalima+Eventos!5e0!3m2!1ses!2sar!4v1499092163296" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
                     </div>
                 </div>
                 </div>
