--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -33,10 +33,6 @@
     width: 100%;
     background: rgba(255, 255, 255, 0.8);
     font-size: 30px; }
-    @media (min-width: 768px) and (max-width: 1024px) {
-      .top .contCount {
-        background: none !important;
-        position: relative; } }
     @media (min-width: 0px) and (max-width: 767px) {
       .top .contCount {
         background: none !important;
@@ -51,9 +47,6 @@
         .top .contCount .titleCount {
           margin-top: -26px !important;
           text-align: center; } }
-    @media (min-width: 768px) and (max-width: 1024px) {
-      .top .contCount .countt {
-        margin-top: -58px !important; } }
     @media (min-width: 0px) and (max-width: 767px) {
       .top .contCount .countt {
         margin-top: -58px !important; } }
@@ -71,10 +64,6 @@
     position: absolute;
     right: 5%;
     top: 10%; }
-    @media (min-width: 768px) and (max-width: 1024px) {
-      .top .welcome {
-        top: 4%;
-        left: 40px; } }
     @media (min-width: 0px) and (max-width: 767px) {
       .top .welcome {
         top: 4%;
@@ -144,6 +133,9 @@
 
 .menu {
   padding: 15px 0; }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .menu {
+      padding: 40px 0; } }
   .menu a {
     text-align: center;
     float: left;
@@ -221,9 +213,6 @@
     .regalo {
       height: inherit !important;
       font-size: 55px !important; } }
-  @media (min-width: 768px) and (max-width: 1024px) {
-    .regalo .regalosImg {
-      display: none !important; } }
   @media (min-width: 0px) and (max-width: 767px) {
     .regalo .regalosImg {
       display: none !important; } }
