--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -42,10 +42,6 @@
 		width:100%;
 		background: rgba(255,255,255,.8);
 		font-size: 30px;
-                @include tablet {
-                    background: none!important;
-                    position:relative;
-                }
                 @include mobile {
                     background: none!important;
                     position:relative;
@@ -62,9 +58,6 @@
                         }
 		}
                 .countt{
-                    @include tablet {
-                            margin-top:-58px!important;
-                    }
                     @include mobile {
                             margin-top:-58px!important;
                     }
@@ -88,10 +81,6 @@
 		position: absolute;
 		right: 5%;
 		top: 10%;
-                @include tablet {
-                    top: 4%;
-                    left:40px;
-                }
                 @include mobile {
                     top: 4%;
                     left:40px;
@@ -180,6 +169,9 @@
 }
 .menu{
 	padding: 15px 0;
+        @include tablet {
+            padding: 40px 0;
+        }
 	a{
 		text-align:center;
 		float: left;
@@ -270,9 +262,6 @@
             font-size:55px!important;
         }
         .regalosImg{
-            @include tablet {
-                display:none!important;
-            }
             @include mobile {
                 display:none!important;
             }
