Se arregla estilos

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,7 @@
                             <p>Sabri y Alexis</p>
                         </div>
                         {% else %}
-                            <div class="sya col-md-12 tituloMargen">
+                            <div class="sya col-md-12">
                             <p>Sabri y Alexis</p>
                             </div>
                         {% endif %}
