--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -78,7 +78,7 @@
                 </div>
             </section>
             <section class="col-sm-12 confirmAsist" id="confirmAsist">            
-                <div class="row background"></div>
+                <img class="background" src="{{asset('bundles/app/images/black.jpg')}}" alt="">
                 <div class="container text-center">
                 <div class="text">
                     <h2 class="">Queremos que compartas este momento con nosotros</h2>
