--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -207,22 +207,19 @@
 }
 
 .confirmAsist{
-	background: black;
 	height: 560px;
-	z-index: -11;
+	overflow: hidden;
+	// z-index: -11;
 	.background{
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		background: url('../images/confirmAsist.jpg');
-		background-repeat: no-repeat;
-		background-size:100%;
-		opacity: .5;
-		z-index: -10;
+	    margin-left: -15px;
+	    margin-right: -15px;
+	    position: absolute;
+	    width: 100%;
+	    top: -50%;
+	    z-index: -10;
 	}
 	.text{
+		z-index: 200;
 		margin: 0 auto;
 		width: 60%;
 		h2{
@@ -354,6 +351,8 @@
 }
 
 footer{
+	float:left;
+	clear:both;
 	.row{
 		position:relative;
 		height: 450px;
