--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -78,7 +78,7 @@
                 </div>
             </section>
             <section class="col-sm-12 confirmAsist" id="confirmAsist">            
-                <img class="background" src="{{asset('bundles/app/images/black.jpg')}}" alt="">
+                <img class="background"  class="img-responsive" src="{{asset('bundles/app/images/black.jpg')}}" alt="">
                 <div class="container text-center">
                 <div class="text">
                     <h2 class="">Queremos que compartas este momento con nosotros</h2>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 infoBco text-center">
-                        <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
+                        <img  src="{{asset('bundles/app/images/line02.png')}}" alt="">
                         <h2 class="titlePhrase">¿Querés hacernos un regalo?</h2>
                             <div class="phrase">
                                 <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
