--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -146,6 +146,9 @@
 				border-radius: 13px;
 				font-family: 'helvetica';
 			}
+                        @include desktop {
+                            display:none!important;
+                        }
                         @include tablet {
                             display:none!important;
                         }
@@ -170,7 +173,13 @@
 .menu{
 	padding: 15px 0;
         @include tablet {
-            padding: 40px 0;
+            padding: 0;
+            width:50%;
+            margin-top:30px;
+        }
+        @include mobile {
+            padding: 0;
+            margin-top:30px;
         }
 	a{
 		text-align:center;
@@ -209,6 +218,9 @@
 .confirmAsist{
 	height: 560px;
 	overflow: hidden;
+        @include mobile {
+            height:100%;
+        }
 	// z-index: -11;
 	.background{
 	    margin-left: -15px;
@@ -217,11 +229,20 @@
 	    width: 100%;
 	    top: -50%;
 	    z-index: -10;
+            @include tablet {
+                top: 0%;
+            }
+            @include mobile {
+                top: 0%;
+            }
 	}
 	.text{
 		z-index: 200;
 		margin: 0 auto;
 		width: 60%;
+                @include mobile {
+                    width:100%;
+                }
 		h2{
 			float: none;
 			font-size:45px;
@@ -229,6 +250,9 @@
 			margin: 0;
 			color: white;
 			font-family: 'futura-light';
+                        @include mobile {
+                            font-size:20px;
+                        }
 		}
 		img{
 			margin-top: 10px;
@@ -242,12 +266,19 @@
 		overflow: hidden;
 		width: 25%;
 		padding: 20px;
+                @include mobile {
+                    width: 50%;
+                }
 		.btnConfirm{
 			color: white;
 			margin: 0 auto;
 			font-family: 'futura-light';
 			text-align: center;
 			font-size: 25px;
+                        @include mobile {
+                            font-size:17px;
+                        }
+                        
 		}
 	}
 }
@@ -260,6 +291,9 @@
         }
         .regalosImg{
             @include mobile {
+                display:none!important;
+            }
+            @include tablet {
                 display:none!important;
             }
         }
@@ -342,6 +376,9 @@
 	}
 }
 .glyphicon-menu-down{
+    @include desktop {
+        display:none!important;
+    }
     @include tablet {
         display:none!important;
     }
@@ -350,8 +387,7 @@
     }
 }
 
-footer{
-	float:left;
+footer{	
 	clear:both;
 	.row{
 		position:relative;
