--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -128,13 +128,16 @@
 				display:block;
 				font-size: 30px;
 			}
+                        @include mobile {
+                            font-size:20px!important;
+                        }
 		}
                 .nuestroCasam{
                     @include tablet {
                             font-size:29px!important;
                         }
                         @include mobile {
-                            font-size:29px!important;
+                            font-size:24px!important;
                         }
                 }
 		.ctaConfirm{
