--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -105,8 +105,8 @@
                         <h2 class="titlePhrase">¿Querés hacernos un regalo?</h2>
                             <div class="phrase">
                                 <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
-                                <span>Banco Francés 123321456654 </span>
-                                <span>CBU 1324354657687980. </span>
+                                <span>Banco Supervielle CA$ 82-2389650-3</span>
+                                <span>CBU 0270082320023896500038. </span>
                             </div>
                         <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
                     </div>
